# drum-constants-api

./: .gitignore  CODE_OF_CONDUCT.md  GOVERNANCE.md  LICENSE.txt  README.md  pyproject.toml
docs/: SUBPATH_HOSTING.md
frontend/: vite.config.js
frontend/src/: App.css  App.jsx
scripts/: sync_data.py
src/: app.py  config.py  model.py  serializer.py
src/data/: codata_constants.ttl
src/static/: index.html  postman_collection.json  sparql.html
src/static/assets/: index-BHTz3PN8.js  index-OBiaGUkj.css
src/templates/: base.html  concept.html  concepts.html  constant.html  constants.html  index.html  quantities.html  quantity.html  unit.html  units.html  version.html  versions.html
tests/: test_fastapi_app.py
