[project]
name = "drum-api"
version = "0.1.0"
description = "Open source Flask API package."
authors = [{ name = "Pascal Heus", email = "pascal@codata.org" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "gunicorn",
    "uvicorn",
    "pydantic",
    "rdflib",
    "jinja2",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = ["pytest", "requests", "httpx"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
include = [
    "src/data/*.ttl",
    "src/data/*.rdf",
    "src/data/*.n3",
    "src/static/**/*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
